@@ -1,5 +1,7 @@
 package com.financeos.core.security;
 
+import com.financeos.core.observability.LoggingAccessDeniedHandler;
+import com.financeos.core.observability.LoggingAuthenticationEntryPoint;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpStatus;
@@ -11,7 +13,6 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
 import org.springframework.security.web.context.SecurityContextRepository;
 import org.springframework.web.cors.CorsConfiguration;
@@ -19,8 +20,14 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.security.web.context.SecurityContextHolderFilter;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.annotation.Order;
 import java.util.Arrays;
 import java.util.List;
+
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 
 @Configuration
 @EnableWebSecurity
@@ -28,10 +35,28 @@ public class SecurityConfig {
 
     private final AppConfigProperties appConfig;
     private final UserContextFilter userContextFilter;
+    private final LoggingAuthenticationEntryPoint authEntryPoint;
+    private final LoggingAccessDeniedHandler accessDeniedHandler;
 
-    public SecurityConfig(AppConfigProperties appConfig, UserContextFilter userContextFilter) {
+    public SecurityConfig(
+            AppConfigProperties appConfig,
+            UserContextFilter userContextFilter,
+            LoggingAuthenticationEntryPoint authEntryPoint,
+            LoggingAccessDeniedHandler accessDeniedHandler) {
         this.appConfig = appConfig;
         this.userContextFilter = userContextFilter;
+        this.authEntryPoint = authEntryPoint;
+        this.accessDeniedHandler = accessDeniedHandler;
+    }
+
+    @Bean
+    @Order(0)
+    public SecurityFilterChain managementSecurity(HttpSecurity http,
+            @Value("${management.server.port:0}") int managementPort) throws Exception {
+        http.securityMatcher(request -> managementPort != 0 && request.getLocalPort() == managementPort)
+                .authorizeHttpRequests(a -> a.anyRequest().permitAll())
+                .csrf(csrf -> csrf.disable());
+        return http.build();
     }
 
     @Bean
@@ -45,13 +70,16 @@ public class SecurityConfig {
                 .securityContext(context -> context
                         .securityContextRepository(securityContextRepository()))
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/v1/auth/login", "/api/v1/auth/signup").permitAll()
-                        .requestMatchers("/api/v1/auth/google/**").permitAll()
-                        .requestMatchers("/actuator/health").permitAll()
+                        .requestMatchers(AntPathRequestMatcher.antMatcher("/api/v1/auth/login"), AntPathRequestMatcher.antMatcher("/api/v1/auth/signup")).permitAll()
+                        .requestMatchers(AntPathRequestMatcher.antMatcher("/api/v1/auth/google/**")).permitAll()
                         .anyRequest().authenticated())
+                // Note: userContextFilter is registered here inside the security chain (order -100).
+                // OncePerRequestFilter's already-filtered guard turns the standalone @Order(0) bean copy
+                // into a pass-through. AccessLogFilter (@Order(10)) depends on userContextFilter running first.
                 .addFilterAfter(userContextFilter, SecurityContextHolderFilter.class)
                 .exceptionHandling(ex -> ex
-                        .authenticationEntryPoint(new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED)))
+                        .authenticationEntryPoint(authEntryPoint)
+                        .accessDeniedHandler(accessDeniedHandler))
                 .logout(logout -> logout
                         .logoutUrl("/api/v1/auth/logout")
                         .logoutSuccessHandler((request, response, authentication) -> {
@@ -68,10 +96,13 @@ public class SecurityConfig {
         return new HttpSessionSecurityContextRepository();
     }
 
+    private static final Logger log = LoggerFactory.getLogger(SecurityConfig.class);
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of(appConfig.getCors().getAllowedOrigins().split(",")));
+        List<String> allowedOrigins = Arrays.asList(appConfig.getCors().getAllowedOrigins().split(","));
+        configuration.setAllowedOrigins(allowedOrigins);
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setAllowCredentials(true);
@@ -79,7 +110,21 @@ public class SecurityConfig {
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-        return source;
+
+        return request -> {
+            String origin = request.getHeader("Origin");
+            CorsConfiguration corsConfig = source.getCorsConfiguration(request);
+            if (origin != null && corsConfig != null) {
+                String checked = corsConfig.checkOrigin(origin);
+                if (checked == null) {
+                    log.warn("CORS rejected: origin={}, allowedOrigins={}", origin, allowedOrigins,
+                            net.logstash.logback.argument.StructuredArguments.keyValue("event", com.financeos.core.observability.Events.AUTH_CORS_REJECTED),
+                            net.logstash.logback.argument.StructuredArguments.keyValue("origin", origin),
+                            net.logstash.logback.argument.StructuredArguments.keyValue("allowedOrigins", String.join(",", allowedOrigins)));
+                }
+            }
+            return corsConfig;
+        };
     }
 
     @Bean
